add integration tests for API module