@@ -33,13 +33,13 @@ public class CarServiceTest {
         customizer.customize(builder);
         service = new CarService(builder.build());
     }
+
     @Test
     public void shouldReturnAllCars() {
-
         String responseBody = """
                 [
-                    {"id": "1", "brand": "Tesla", "color": "White", "identifier": 12345},
-                    {"id": "2", "brand": "BMW", "color": "Black", "identifier": 34567}
+                    {"id": 1, "brand": "Tesla", "color": "White", "identifier": 12345},
+                    {"id": 2, "brand": "BMW", "color": "Black", "identifier": 34567}
                 ]
                 """;
 
@@ -51,11 +51,36 @@ public class CarServiceTest {
         List<Car> actualCars = service.getCars();
 
         List<Car> expectedCars = List.of(
-                new Car("Tesla", "White"),
-                new Car("BMW", "Black")
+                new Car(1L, "Tesla", "White", 12345),
+                new Car(2L, "BMW", "Black", 34567)
         );
 
-        assertEquals(expectedCars.get(0).getBrand(), actualCars.get(0).getBrand());
-        assertEquals(expectedCars.get(0).getColor(), actualCars.get(0).getColor());
+        assertEquals(expectedCars.getFirst().getId(), actualCars.getFirst().getId());
+        assertEquals(expectedCars.getFirst().getBrand(), actualCars.getFirst().getBrand());
+        assertEquals(expectedCars.getFirst().getColor(), actualCars.getFirst().getColor());
+
+        assertEquals(expectedCars.getLast().getId(), actualCars.getLast().getId());
+        assertEquals(expectedCars.getLast().getBrand(), actualCars.getLast().getBrand());
+        assertEquals(expectedCars.getLast().getColor(), actualCars.getLast().getColor());
+    }
+
+    @Test
+    public void shouldReturnCarById() {
+        String responseBody = """
+                
+                {"id": 1, "brand": "Tesla", "color": "White", "identifier": 12345}
+                
+                """;
+
+        customizer.getServer()
+                .expect(MockRestRequestMatchers
+                        .requestTo("car/1"))
+                .andRespond(MockRestResponseCreators.withSuccess(responseBody, MediaType.APPLICATION_JSON));
+
+        Car actualCar = service.getCarById(1L);
+
+        Car expectedCar = new Car(1L, "Tesla", "White", 12345);
+
+        assertEquals(expectedCar.getId(), actualCar.getId());
     }
 }
